[project]
name = "sword-macro"
version = "0.1.0"
description = "RL and macro for sword growing game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "pandas>=2.3.3",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "sb3-contrib>=2.7.1",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
]
